# ocaml-extlib

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
bzl/: CPPO.bzl  README.md  obazl.edn  opam.bzl
bzl/config/: BUILD.bazel
bzl/tools/: user.bazelrc.example  user.bazelrc.tpl
src/: BUILD.bazel  BUILD.bzl
test/: BUILD.bazel  BUILD.bzl
