workspace( name = "ocaml_extlib" )

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "obazl_rules_ocaml",
    remote = "https://github.com/obazl/rules_ocaml",
    branch = "master",
)

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl",
     "ocaml_configure",
     "ocaml_register_toolchains",
     "opam_configure")

opam_configure()

load("//bzl:opam.bzl", "opam_cfg")

ocaml_configure()

ocaml_register_toolchains(installation="host")
